--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
     <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
             <div class="container">
-                <ul class="nav pull-right">
+                <p class="navbar-text pull-right">
+                    Open your console for more instructions
+                </p>
+                <a class="brand" href="//github.com/xonecas/2d-particle-experiements">
+                    Particle Playground
+                </a>
+                <a href="/">
+                    <small class="navbar-text">(click to reset)</small>
+                </a>
+                <ul class="nav">
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Functions<b class="caret"></b></a>
                         <ul class="dropdown-menu">
@@ -28,18 +37,6 @@
                         </ul>
                     </li>
                 </ul>
-
-                <p class="navbar-text pull-right">
-                    Open your console for instructions
-                </p>
-
-                <a class="brand" href="//github.com/xonecas/2d-particle-experiements">
-                    Particle Playground
-                </a>
-
-                <a href="/">
-                    <small class="navbar-text">(click to reset)</small>
-                </a>
             </div>
         </div>
     </div>
